--- a/src/pages/BestGifferPage/styles/BestGifPage.styles.css
+++ b/src/pages/BestGifferPage/styles/BestGifPage.styles.css
@@ -1,7 +1,7 @@
 .TopArtist {
     background-color: #3b00e2;
-    /*width: 100vw;*/
-    /*height: 100vh;*/
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
 }
 
@@ -147,11 +147,10 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 130%;
-    height: 100%;
     background-color: #3b00e2;
     color: white;
     z-index: 10;
+    overflow: hidden;
 }
 
 .album-bg p {
@@ -174,6 +173,11 @@
     .top-artist-cont .top-artist-card .artist-img {
         width: 75%;
         margin-right: 0;
+    }
+
+    .album-bg {
+        overflow: hidden;
+        width: 100%;
     }
 }
 
