--- a/src/pages/TopByMessagesPage/styles/TopMsgPage.style.css
+++ b/src/pages/TopByMessagesPage/styles/TopMsgPage.style.css
@@ -1,7 +1,7 @@
 .TopArtist {
     background-color: #3b00e2;
-    /*width: 100vw;*/
-    /*height: 100vh;*/
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
 }
 
